# cavepi_project

./: README.md
src/cavepi_controller/: package.xml  setup.cfg  setup.py
src/cavepi_controller/cavepi_controller/: autopilot.py  data_receiver.py  ping2_publisher.py  pixhawk_logic.py  rope_pose_waypoints_pub.py  test_depth_hold.py  test_pixhawk.py
src/cavepi_controller/launch/: autopilot.launch.py  movement_depth_hold.launch.py  test_autopilot.launch.py
src/cavepi_detection/: package.xml
src/cavepi_detection/cavepi_detection/: camera_publisher.py  caveline_detector.py  data_sender.py  qr_detector.py  setup.cfg  setup.py
src/cavepi_detection/cavepi_detection/cavepi_detection/: caveline_detector.py  data_sender.py  detected_lines.py  qr_detector.py  test_camera.py
src/cavepi_detection/cavepi_detection/launch/: all_in_one.launch.py
src/cavepi_detection/launch/: test_front_cam.launch.py
