<?xml version="1.0"?>
<package format="3">
  <name>cavepi_detection</name>
  <version>0.0.1</version>
  <description>
    ROS2 package for publishing camera feeds, QR code detection, cave line detection, 
    and data sending over UDP, developed by ROBOPI Lab for underwater robotics applications.
  </description>
  <maintainer email="xianyao.li@ufl.edu">xianyao</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ultralytics</depend>
  <depend>ament_index_python</depend>
  <depend>opencv-python</depend>
  <depend>numpy</depend>
  <depend>launch</depend> 
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <launch>
      <launch_file>launch/all_in_one_launch.py</launch_file>
    </launch>
  </export>
</package>

